# QueryTube

./: .env.template  README.md  docker-compose.yml  nginx.conf
.github/: funding.yml
.github/workflows/: deploy.yml
back/: .env.template  Dockerfile  Makefile  config.py  dependencies.py  main.py  partial_types.py  prisma_partials.py  pyproject.toml  schema.prisma  startup.py
back/models/: elasticsearch.py  source.py
back/routes/: source.py
back/services/elasticsearch/: __init__.py  base.py  source.py
front/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
front/src/: App.tsx  index.css  main.tsx  routes.tsx
front/src/components/: app-sidebar.tsx  feature-cards.tsx  layout.tsx  source-form.tsx  url-preview-card.tsx
front/src/contexts/: history.tsx
front/src/hooks/: source.ts
front/src/lib/: api.ts  sanitize.ts
front/src/pages/: chat-session.tsx  home.tsx
front/src/services/: source.ts
front/src/types/: source.ts
